# chat

./: .eslintrc.json  .nano-staged.js  biome.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: lint.yml
plugins/: import-common-plugin.js  inject-app-version-plugin.mjs
scripts/: watch.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2024-08-10-102509_create_conversations/: down.sql  up.sql
src-tauri/migrations/2024-08-10-102514_create_agents/: up.sql
src-tauri/migrations/2024-08-10-102616_create_documents/: up.sql
src-tauri/src/: db.rs  main.rs  schema.rs
src/hooks/tauri/: shortcuts.ts
src/pages/: index.tsx
version/: getVersion.mjs
